Added a function that generates the starboard navigation lights view. You have to use your imagination, but I think they're close enough.

--- a/nav_lights_analysis.ipynb
+++ b/nav_lights_analysis.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Set up.\n",
     "\n",
@@ -331,6 +340,85 @@
    ],
    "source": [
     "plt.imshow(stern_images[33].reshape(255, 255, 3))\n",
+    "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def broad_greater_than_50_meters_starboard():\n",
+    "    \"\"\"\n",
+    "    Return a numpy array of randomly generated images of a \n",
+    "    power driven vessel that has two masthead lights and one running light\n",
+    "    visible.\n",
+    "    \"\"\"\n",
+    "    white = (255, 255, 255)\n",
+    "    black = (0, 0, 0)\n",
+    "    green = (0, 255, 0)\n",
+    "    total_gens = np.random.randint(500, 701)\n",
+    "    all_broad_images = np.empty([total_gens, 195075], dtype=np.uint8)\n",
+    "    for i in range(total_gens):\n",
+    "        new_array = np.zeros((255, 255, 3))\n",
+    "        taller_masthead_light = np.random.randint(50, 126)\n",
+    "        shorter_masthead_light = np.random.randint(130, 186)\n",
+    "        distance_bw_left_endpoint = np.random.randint(20, 126)\n",
+    "        distance_bw_right_endpoint = np.random.randint(125, 211)\n",
+    "        running_light_diff = np.random.randint(10, 31)\n",
+    "        light_width = np.random.randint(10, 21)\n",
+    "        tall_masthead_height = taller_masthead_light + light_width\n",
+    "        tall_masthead_width = distance_bw_left_endpoint + light_width\n",
+    "        short_masthead_height = shorter_masthead_light + light_width\n",
+    "        short_masthead_width = distance_bw_right_endpoint + light_width\n",
+    "        running_light_start = shorter_masthead_light + running_light_diff\n",
+    "        running_light_width = running_light_start + light_width\n",
+    "        if distance_bw_right_endpoint - distance_bw_left_endpoint < 2 * light_width:\n",
+    "            running_light_loc = np.random.randint(distance_bw_left_endpoint - 20, distance_bw_left_endpoint + 21)\n",
+    "        else:\n",
+    "            running_light_loc = np.random.randint(distance_bw_left_endpoint, distance_bw_right_endpoint)\n",
+    "        running_light_area = running_light_loc + light_width\n",
+    "        new_array[taller_masthead_light:tall_masthead_height, distance_bw_left_endpoint:tall_masthead_width] = white\n",
+    "        new_array[shorter_masthead_light:short_masthead_height, distance_bw_right_endpoint:short_masthead_width] = white\n",
+    "        new_array[running_light_start:running_light_width, running_light_loc: running_light_area] = green\n",
+    "        new_array = new_array.flatten()\n",
+    "        all_broad_images[i] = new_array\n",
+    "\n",
+    "    return all_broad_images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "broad_images = broad_greater_than_50_meters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQcAAAD8CAYAAAB6iWHJAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAADJFJREFUeJzt3U+MXeV5x/HvrxBYECSgBOQat5DI\nkUo2jmVRJKKILpqANyYLKrJorAjJWYCUSOnCSRZh2VZNIqG2SI6CYqoUipQgvEjbUCsS3UCwETE2\nLsFJXJjYshtREdRISYGnizlubu1nPGPfOXPvhO9HujrnvvOec585Hv38nr83VYUkne13Zl2ApPlk\nOEhqGQ6SWoaDpJbhIKllOEhqjRYOSe5I8nKSY0l2j/U5ksaRMa5zSHIJ8CPgT4AF4Dngk1X10qp/\nmKRRjDVyuAU4VlU/qapfA48BO0b6LEkjuHSk9W4EXpt4vwD80VKdk3iZpjS+n1fV+1baeaxwSNP2\n/wIgyS5g10ifL+lc/3EhnccKhwVg08T7G4ATkx2qag+wBxw5SPNorGMOzwGbk9yU5DLgHmDfSJ8l\naQSjjByq6q0k9wP/AlwCPFxVR8b4LEnjGOVU5gUX4W6FtBYOVtW2lXb2CklJLcNBUstwkNQyHCS1\nDAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQy\nHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUuvS\naRZOchx4E3gbeKuqtiW5BvhH4EbgOPCnVfVf05Upaa2txsjhj6tqS1VtG97vBvZX1WZg//Be0joz\nxm7FDmDvML8XuGuEz5A0smnDoYDvJTmYZNfQdn1VnQQYptd1CybZleRAkgNT1iBpBFMdcwBuq6oT\nSa4Dnkry7ytdsKr2AHsAktSUdXTrn2r5JKtUibQ+TTVyqKoTw/Q08ARwC3AqyQaAYXp62iIlrb2L\nDockVyS58sw88DHgMLAP2Dl02wk8OW2RktbeNLsV1wNPDMPvS4F/qKp/TvIc8HiSe4FXgbunL1PS\nWsu0++arUoTHHKS1cHDikoNleYWkpJbhIKllOEhqGQ6SWoaDpJbhIKllOEhqGQ6SWoaDpJbhIKll\nOEhqGQ6SWtM+7GVueeOUNB1HDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEg\nqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGotGw5JHk5yOsnhibZrkjyV5JVhevXQ\nniQPJjmW5FCSrWMWL2k8Kxk5fBO446y23cD+qtoM7B/eA9wJbB5eu4CHVqdMSWtt2XCoqqeB189q\n3gHsHeb3AndNtD9Si54BrkqyYbWKlbR2LvaYw/VVdRJgmF43tG8EXpvotzC0SVpnVvtLbbpvkqm2\nY7KLxV0PSXPoYkcOp87sLgzT00P7ArBpot8NwIluBVW1p6q2VdW2i6xB0oguNhz2ATuH+Z3AkxPt\nnxrOWtwKvHFm90PS+rLsbkWSR4HbgWuTLABfBv4CeDzJvcCrwN1D9+8C24FjwC+BT49Qs6Q1kKr2\nkMDaFpHMvgjpt9/BC9mN9wpJSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDU\nMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLL\ncJDUMhwktZb9lm3pt9W0XyKdZJUqmU+OHCS1DAdJLcNBUstwkNQyHCS1lg2HJA8nOZ3k8ETbA0l+\nluSF4bV94mdfSHIsyctJPj5W4ZLGtZKRwzeBO5r2r1XVluH1XYAkNwP3AB8alvm7JJesVrGS1s6y\n4VBVTwOvr3B9O4DHqupXVfVT4BhwyxT1SZqRaY453J/k0LDbcfXQthF4baLPwtAmaZ252HB4CPgA\nsAU4CXxlaO8uGWsvQ0uyK8mBJAcusgZJI7qocKiqU1X1dlW9A3yd3+w6LACbJrreAJxYYh17qmpb\nVW27mBokjeuiwiHJhom3nwDOnMnYB9yT5PIkNwGbgR9MV6KkWVj2xqskjwK3A9cmWQC+DNyeZAuL\nuwzHgc8AVNWRJI8DLwFvAfdV1dvjlC5pTJn2zrRVKSKZfRF613kX3pV58EJ2471CUlLL5znoXWsd\n/s+/phw5SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqeVFUBdi2ou8veZG64gjB0ktw0FSy3CQ\n1DIcJLUMB0ktw0FSy3CQ1DIcJLUMB0ktw0FSy3CQ1DIcJLUMB0ktw0FSy3CQ1DIcJLV82MuF8GEt\nehdx5CCpZThIahkOklqGg6SW4SCpZThIai0bDkk2Jfl+kqNJjiT57NB+TZKnkrwyTK8e2pPkwSTH\nkhxKsnXsX0LS6lvJyOEt4PNV9YfArcB9SW4GdgP7q2ozsH94D3AnsHl47QIeWvWqJY1u2XCoqpNV\n9fww/yZwFNgI7AD2Dt32AncN8zuAR2rRM8BVSTaseuWSRnVBxxyS3Ah8GHgWuL6qTsJigADXDd02\nAq9NLLYwtJ29rl1JDiQ5cOFlSxrbii+fTvJe4NvA56rqF8mS1xJ3PzjnWyarag+wZ1j3tN9CKWmV\nrWjkkOQ9LAbDt6rqO0PzqTO7C8P09NC+AGyaWPwG4MTqlCtprazkbEWAbwBHq+qrEz/aB+wc5ncC\nT060f2o4a3Er8MaZ3Q9J60eqzj+iT/IR4N+AF4F3huYvsnjc4XHg94FXgbur6vUhTP4GuAP4JfDp\nqjrvcQV3K6Q1cbCqtq2087LhsBYMB2lNXFA4eIWkpJbhIKllOEhqGQ6SWoaDpJbhIKllOEhqGQ6S\nWoaDpJbhIKllOEhqGQ6SWoaDpJbhIKllOEhqGQ6SWoaDpJbhIKllOEhqGQ6SWoaDpJbhIKllOEhq\nGQ6SWoaDpJbhIKllOEhqGQ6SWoaDpJbhIKllOEhqGQ6SWoaDpNay4ZBkU5LvJzma5EiSzw7tDyT5\nWZIXhtf2iWW+kORYkpeTfHzMX0DSOC5dQZ+3gM9X1fNJrgQOJnlq+NnXquqvJzsnuRm4B/gQ8HvA\nvyb5YFW9vZqFSxrXsiOHqjpZVc8P828CR4GN51lkB/BYVf2qqn4KHANuWY1iJa2dCzrmkORG4MPA\ns0PT/UkOJXk4ydVD20bgtYnFFjh/mEiaQysOhyTvBb4NfK6qfgE8BHwA2AKcBL5ypmuzeDXr25Xk\nQJIDF1y1pNGtKBySvIfFYPhWVX0HoKpOVdXbVfUO8HV+s+uwAGyaWPwG4MTZ66yqPVW1raq2TfML\nSBrHSs5WBPgGcLSqvjrRvmGi2yeAw8P8PuCeJJcnuQnYDPxg9UqWtBZWcrbiNuDPgBeTvDC0fRH4\nZJItLO4yHAc+A1BVR5I8DrzE4pmO+zxTIa0/qTrncMDaF5H8J/DfwM9nXcsKXMv6qBOsdQzrpU44\nt9Y/qKr3rXThuQgHgCQH1sPxh/VSJ1jrGNZLnTB9rV4+LallOEhqzVM47Jl1ASu0XuoEax3DeqkT\npqx1bo45SJov8zRykDRHZh4OSe4Ybu0+lmT3rOs5W5LjSV4cbks/MLRdk+SpJK8M06uXW89ItT2c\n5HSSwxNtbW1Z9OCwnQ8l2TrjOufulv/zPJ5gHrfp+I9SqKqZvYBLgB8D7wcuA34I3DzLmpoajwPX\nntX2V8DuYX438Jczqu2jwFbg8HK1AduBf2Lx3pdbgWdnXOcDwJ83fW8e/g4uB24a/j4uWaM6NwBb\nh/krgR8N9czjNl2q1lXbrrMeOdwCHKuqn1TVr4HHWLzle97tAPYO83uBu2ZRRFU9Dbx+VvNSte0A\nHqlFzwBXnXUJ/FrXuZSZ3fJfSz+eYB636eiPUph1OKyH27sL+F6Sg0l2DW3XV9VJWPxHAq6bWXXn\nWqq2edzWc3vL/1mPJ5jrbTrWoxRmHQ4rur17xm6rqq3AncB9ST4664Iu0rxt66lu+R9T83iCJbs2\nbbOuddW266zDYUW3d89SVZ0YpqeBJ1gcip06M3wcpqdnV+E5lqptrrZ1TXnL/1i6xxMwp9t0jEcp\nTJp1ODwHbE5yU5LLWHz25L4Z1/R/klwxPDeTJFcAH2Px1vR9wM6h207gydlU2Fqqtn3Ap4Yj7LcC\nb5wZKs/CPN7yv9TjCZjDbbpUrau6Xdfq6Op5jrpuZ/FI64+BL826nrNqez+LR3h/CBw5Ux/wu8B+\n4JVhes2M6nuUxaHj/7D4P8O9S9XG4rDyb4ft/CKwbcZ1/v1Qx6HhD3fDRP8vDXW+DNy5hnV+hMWh\n9iHgheG1fU636VK1rtp29QpJSa1Z71ZImlOGg6SW4SCpZThIahkOklqGg6SW4SCpZThIav0vvkdt\nWPh3TAUAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x20596ffba58>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.imshow(broad_images[519].reshape(255, 255, 3))\n",
     "plt.show();"
    ]
   },
