Did starboard broad. Thinking maybe vessels less than 50 are all too similar to be really distinguishable. I know depending on the distance and visibility it would be difficult to distinguish them without some supplemental data.

--- a/nav_lights_analysis.ipynb
+++ b/nav_lights_analysis.ipynb
@@ -580,6 +580,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def broad_less_than_50_meters_starboard():\n",
+    "    \"\"\"\n",
+    "    Return a numpy array of randomly generated images of a \n",
+    "    power driven vessel that has one masthead light and one running light\n",
+    "    visible.\n",
+    "    \"\"\"\n",
+    "    white = (255, 255, 255)\n",
+    "    black = (0, 0, 0)\n",
+    "    green = (0, 255, 0)\n",
+    "    total_gens = np.random.randint(500, 701)\n",
+    "    all_broad_images = np.empty([total_gens, 195075], dtype=np.uint8)\n",
+    "    for i in range(total_gens):\n",
+    "        new_array = np.zeros((255, 255, 3))\n",
+    "        taller_masthead_light = np.random.randint(50, 201)\n",
+    "        distance_bw_left_endpoint = np.random.randint(20, 211)\n",
+    "        running_light_diff = np.random.randint(10, 31)\n",
+    "        light_width = np.random.randint(10, 21)\n",
+    "        tall_masthead_height = taller_masthead_light + light_width\n",
+    "        tall_masthead_width = distance_bw_left_endpoint + light_width\n",
+    "        running_light_start = tall_masthead_height + running_light_diff\n",
+    "        running_light_width = running_light_start + light_width\n",
+    "        if distance_bw_left_endpoint < 2 * light_width:\n",
+    "            running_light_loc = np.random.randint(distance_bw_left_endpoint - 20, distance_bw_left_endpoint + 21)\n",
+    "        else:\n",
+    "            running_light_loc = np.random.randint(distance_bw_left_endpoint - 20, 211)\n",
+    "        running_light_area = running_light_loc + light_width\n",
+    "        new_array[taller_masthead_light:tall_masthead_height, distance_bw_left_endpoint:tall_masthead_width] = white\n",
+    "        new_array[running_light_start:running_light_width, running_light_loc: running_light_area] = green\n",
+    "        new_array = new_array.flatten()\n",
+    "        all_broad_images[i] = new_array\n",
+    "\n",
+    "    return all_broad_images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lt_50m_broad_starboard_images = broad_less_than_50_meters_starboard()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQcAAAD8CAYAAAB6iWHJAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAADHlJREFUeJzt3UGMXeV5xvH/UwgsCBJQAnKNW0jk\nSCUbx7IoElFEF03AG5MFFVk0VoTkLEBKpHThJIuwbKsmkVBbJEdBMVUKRUoQXqRtqBWJbiDYiBgb\nl+AkLkxs2Y2oCGqkpMDbxT1ubu13mPHMnLl3ov9PujrnfvOdc18fRg/fd+45Z1JVSNL5fmfWBUia\nT4aDpJbhIKllOEhqGQ6SWoaDpNZo4ZDkjiQvJzmRZO9YnyNpHBnjOocklwA/Av4EWACeAz5ZVS+t\n+YdJGsVYI4dbgBNV9ZOq+jXwGLBrpM+SNIJLR9rvZuC1qfcLwB8t1jmJl2lK4/t5Vb1vuZ3HCoc0\nbf8vAJLsAfaM9PmSLvQfF9N5rHBYALZMvb8BODXdoar2AfvAkYM0j8Y65/AcsDXJTUkuA+4BDoz0\nWZJGMMrIoareSnI/8C/AJcDDVXVsjM+SNI5Rvsq86CKcVkjr4XBV7VhuZ6+QlNQyHCS1DAdJLcNB\nUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJ\nLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1\nLl3NxklOAm8CbwNvVdWOJNcA/wjcCJwE/rSq/mt1ZUpab2sxcvjjqtpWVTuG93uBg1W1FTg4vJe0\nwYwxrdgF7B/W9wN3jfAZkka22nAo4HtJDifZM7RdX1WnAYbldd2GSfYkOZTk0CprkDSCVZ1zAG6r\nqlNJrgOeSvLvy92wqvYB+wCS1CrrkLTGVjVyqKpTw/Is8ARwC3AmySaAYXl2tUVKWn8rDockVyS5\n8tw68DHgKHAA2D102w08udoiJa2/1UwrrgeeSHJuP/9QVf+c5Dng8ST3Aq8Cd6++TEnrLVWzn+57\nzkFaF4enLjlYkldISmoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4\nSGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEg\nqWU4SGoZDpJahoOkluEgqWU4SGotGQ5JHk5yNsnRqbZrkjyV5JVhefXQniQPJjmR5EiS7WMWL2k8\nyxk5fBO447y2vcDBqtoKHBzeA9wJbB1ee4CH1qZMSettyXCoqqeB189r3gXsH9b3A3dNtT9SE88A\nVyXZtFbFSlo/Kz3ncH1VnQYYltcN7ZuB16b6LQxtkjaYS9d4f2naqu2Y7GEy9ZA0h1Y6cjhzbrow\nLM8O7QvAlql+NwCnuh1U1b6q2lFVO1ZYg6QRrTQcDgC7h/XdwJNT7Z8avrW4FXjj3PRD0say5LQi\nyaPA7cC1SRaALwN/ATye5F7gVeDuoft3gZ3ACeCXwKdHqFnSOkhVe0pgfYtIZl+E9Nvv8MVM471C\nUlLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwH\nSS3DQVLLcJDUMhwktQwHSa21/qM2GtHFPgw46f7GkLQ8jhwktQwHSS3DQVLLcJDUMhwktQwHSS3D\nQVLLcJDUMhwktQwHSS3DQVLLcJDU8sarDcQbqbSelhw5JHk4ydkkR6faHkjysyQvDK+dUz/7QpIT\nSV5O8vGxCpc0ruVMK74J3NG0f62qtg2v7wIkuRm4B/jQsM3fJblkrYqVtH6WDIeqehp4fZn72wU8\nVlW/qqqfAieAW1ZRn6QZWc0JyfuTHBmmHVcPbZuB16b6LAxtkjaYlYbDQ8AHgG3AaeArQ3t3xqx9\nfFGSPUkOJTm0whokjWhF4VBVZ6rq7ap6B/g6v5k6LABbprreAJxaZB/7qmpHVe1YSQ2SxrWicEiy\naertJ4Bz32QcAO5JcnmSm4CtwA9WV6KkWVjyOockjwK3A9cmWQC+DNyeZBuTKcNJ4DMAVXUsyePA\nS8BbwH1V9fY4pUsaUy72icajFJHMvgjpt9/hi5nGe/m0pJbhIKllOEhqGQ6SWoaDpJbhIKllOEhq\nGQ6SWoaDpJaPidPGtpJra33a3rI4cpDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwk\ntQwHSS3DQVLLG6+0sXkT1WgcOUhqGQ6SWoaDpJbhIKllOEhqGQ6SWoaDpJbhIKllOEhqGQ6SWoaD\npNaS4ZBkS5LvJzme5FiSzw7t1yR5Kskrw/LqoT1JHkxyIsmRJNvH/kdIWnvLGTm8BXy+qv4QuBW4\nL8nNwF7gYFVtBQ4O7wHuBLYOrz3AQ2tetaTRLRkOVXW6qp4f1t8EjgObgV3A/qHbfuCuYX0X8EhN\nPANclWTTmlcuaVQXdc4hyY3Ah4Fngeur6jRMAgS4bui2GXhtarOFoe38fe1JcijJoYsvW9LYlv08\nhyTvBb4NfK6qfpEseiN994ML/txpVe0D9g37XsmfQ5U0omWNHJK8h0kwfKuqvjM0nzk3XRiWZ4f2\nBWDL1OY3AKfWplxJ62U531YE+AZwvKq+OvWjA8DuYX038ORU+6eGby1uBd44N/2QtHGk6t1H9Ek+\nAvwb8CLwztD8RSbnHR4Hfh94Fbi7ql4fwuRvgDuAXwKfrqp3Pa/gtEJaF4erasdyOy8ZDuvBcJDW\nxUWFg1dISmoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJa\nhoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZ\nDpJahoOkluEgqWU4SGotGQ5JtiT5fpLjSY4l+ezQ/kCSnyV5YXjtnNrmC0lOJHk5ycfH/AdIGsel\ny+jzFvD5qno+yZXA4SRPDT/7WlX99XTnJDcD9wAfAn4P+NckH6yqt9eycEnjWnLkUFWnq+r5Yf1N\n4Diw+V022QU8VlW/qqqfAieAW9aiWEnr56LOOSS5Efgw8OzQdH+SI0keTnL10LYZeG1qswXePUwk\nzaFlh0OS9wLfBj5XVb8AHgI+AGwDTgNfOde12bya/e1JcijJoYuuWtLolhUOSd7DJBi+VVXfAaiq\nM1X1dlW9A3yd30wdFoAtU5vfAJw6f59Vta+qdlTVjtX8AySNYznfVgT4BnC8qr461b5pqtsngKPD\n+gHgniSXJ7kJ2Ar8YO1KlrQelvNtxW3AnwEvJnlhaPsi8Mkk25hMGU4CnwGoqmNJHgdeYvJNx31+\nUyFtPKm64HTA+heR/Cfw38DPZ13LMlzLxqgTrHUMG6VOuLDWP6iq9y1347kIB4AkhzbC+YeNUidY\n6xg2Sp2w+lq9fFpSy3CQ1JqncNg36wKWaaPUCdY6ho1SJ6yy1rk55yBpvszTyEHSHJl5OCS5Y7i1\n+0SSvbOu53xJTiZ5cbgt/dDQdk2Sp5K8MiyvXmo/I9X2cJKzSY5OtbW1ZeLB4TgfSbJ9xnXO3S3/\n7/J4gnk8puM/SqGqZvYCLgF+DLwfuAz4IXDzLGtqajwJXHte218Be4f1vcBfzqi2jwLbgaNL1Qbs\nBP6Jyb0vtwLPzrjOB4A/b/rePPweXA7cNPx+XLJOdW4Ctg/rVwI/GuqZx2O6WK1rdlxnPXK4BThR\nVT+pql8DjzG55Xve7QL2D+v7gbtmUURVPQ28fl7zYrXtAh6piWeAq867BH6961zMzG75r8UfTzCP\nx3T0RynMOhw2wu3dBXwvyeEke4a266vqNEz+IwHXzay6Cy1W2zwe67m95f+8xxPM9TEd61EKsw6H\nZd3ePWO3VdV24E7gviQfnXVBKzRvx3pVt/yPqXk8waJdm7ZZ17pmx3XW4bCs27tnqapODcuzwBNM\nhmJnzg0fh+XZ2VV4gcVqm6tjXau85X8s3eMJmNNjOsajFKbNOhyeA7YmuSnJZUyePXlgxjX9nyRX\nDM/NJMkVwMeY3Jp+ANg9dNsNPDmbCluL1XYA+NRwhv1W4I1zQ+VZmMdb/hd7PAFzeEwXq3VNj+t6\nnV19l7OuO5mcaf0x8KVZ13Nebe9ncob3h8Cxc/UBvwscBF4ZltfMqL5HmQwd/4fJ/xnuXaw2JsPK\nvx2O84vAjhnX+fdDHUeGX9xNU/2/NNT5MnDnOtb5ESZD7SPAC8Nr55we08VqXbPj6hWSklqznlZI\nmlOGg6SW4SCpZThIahkOklqGg6SW4SCpZThIav0vRQ1kUxpMD/YAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2a2ec916be0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.imshow(lt_50m_broad_starboard_images[201].reshape(255, 255, 3))\n",
+    "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
