Added port running light orientations function.

--- a/nav_lights_analysis.ipynb
+++ b/nav_lights_analysis.ipynb
@@ -631,14 +631,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQcAAAD8CAYAAAB6iWHJAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAADHlJREFUeJzt3UGMXeV5xvH/UwgsCBJQAnKNW0jk\nSCUbx7IoElFEF03AG5MFFVk0VoTkLEBKpHThJIuwbKsmkVBbJEdBMVUKRUoQXqRtqBWJbiDYiBgb\nl+AkLkxs2Y2oCGqkpMDbxT1ubu13mPHMnLl3ov9PujrnfvOdc18fRg/fd+45Z1JVSNL5fmfWBUia\nT4aDpJbhIKllOEhqGQ6SWoaDpNZo4ZDkjiQvJzmRZO9YnyNpHBnjOocklwA/Av4EWACeAz5ZVS+t\n+YdJGsVYI4dbgBNV9ZOq+jXwGLBrpM+SNIJLR9rvZuC1qfcLwB8t1jmJl2lK4/t5Vb1vuZ3HCoc0\nbf8vAJLsAfaM9PmSLvQfF9N5rHBYALZMvb8BODXdoar2AfvAkYM0j8Y65/AcsDXJTUkuA+4BDoz0\nWZJGMMrIoareSnI/8C/AJcDDVXVsjM+SNI5Rvsq86CKcVkjr4XBV7VhuZ6+QlNQyHCS1DAdJLcNB\nUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJ\nLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1\nLl3NxklOAm8CbwNvVdWOJNcA/wjcCJwE/rSq/mt1ZUpab2sxcvjjqtpWVTuG93uBg1W1FTg4vJe0\nwYwxrdgF7B/W9wN3jfAZkka22nAo4HtJDifZM7RdX1WnAYbldd2GSfYkOZTk0CprkDSCVZ1zAG6r\nqlNJrgOeSvLvy92wqvYB+wCS1CrrkLTGVjVyqKpTw/Is8ARwC3AmySaAYXl2tUVKWn8rDockVyS5\n8tw68DHgKHAA2D102w08udoiJa2/1UwrrgeeSHJuP/9QVf+c5Dng8ST3Aq8Cd6++TEnrLVWzn+57\nzkFaF4enLjlYkldISmoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4\nSGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEg\nqWU4SGoZDpJahoOkluEgqWU4SGotGQ5JHk5yNsnRqbZrkjyV5JVhefXQniQPJjmR5EiS7WMWL2k8\nyxk5fBO447y2vcDBqtoKHBzeA9wJbB1ee4CH1qZMSettyXCoqqeB189r3gXsH9b3A3dNtT9SE88A\nVyXZtFbFSlo/Kz3ncH1VnQYYltcN7ZuB16b6LQxtkjaYS9d4f2naqu2Y7GEy9ZA0h1Y6cjhzbrow\nLM8O7QvAlql+NwCnuh1U1b6q2lFVO1ZYg6QRrTQcDgC7h/XdwJNT7Z8avrW4FXjj3PRD0say5LQi\nyaPA7cC1SRaALwN/ATye5F7gVeDuoft3gZ3ACeCXwKdHqFnSOkhVe0pgfYtIZl+E9Nvv8MVM471C\nUlLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwH\nSS3DQVLLcJDUMhwktQwHSa21/qM2GtHFPgw46f7GkLQ8jhwktQwHSS3DQVLLcJDUMhwktQwHSS3D\nQVLLcJDUMhwktQwHSS3DQVLLcJDU8sarDcQbqbSelhw5JHk4ydkkR6faHkjysyQvDK+dUz/7QpIT\nSV5O8vGxCpc0ruVMK74J3NG0f62qtg2v7wIkuRm4B/jQsM3fJblkrYqVtH6WDIeqehp4fZn72wU8\nVlW/qqqfAieAW1ZRn6QZWc0JyfuTHBmmHVcPbZuB16b6LAxtkjaYlYbDQ8AHgG3AaeArQ3t3xqx9\nfFGSPUkOJTm0whokjWhF4VBVZ6rq7ap6B/g6v5k6LABbprreAJxaZB/7qmpHVe1YSQ2SxrWicEiy\naertJ4Bz32QcAO5JcnmSm4CtwA9WV6KkWVjyOockjwK3A9cmWQC+DNyeZBuTKcNJ4DMAVXUsyePA\nS8BbwH1V9fY4pUsaUy72icajFJHMvgjpt9/hi5nGe/m0pJbhIKllOEhqGQ6SWoaDpJbhIKllOEhq\nGQ6SWoaDpJaPidPGtpJra33a3rI4cpDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwk\ntQwHSS3DQVLLG6+0sXkT1WgcOUhqGQ6SWoaDpJbhIKllOEhqGQ6SWoaDpJbhIKllOEhqGQ6SWoaD\npNaS4ZBkS5LvJzme5FiSzw7t1yR5Kskrw/LqoT1JHkxyIsmRJNvH/kdIWnvLGTm8BXy+qv4QuBW4\nL8nNwF7gYFVtBQ4O7wHuBLYOrz3AQ2tetaTRLRkOVXW6qp4f1t8EjgObgV3A/qHbfuCuYX0X8EhN\nPANclWTTmlcuaVQXdc4hyY3Ah4Fngeur6jRMAgS4bui2GXhtarOFoe38fe1JcijJoYsvW9LYlv08\nhyTvBb4NfK6qfpEseiN994ML/txpVe0D9g37XsmfQ5U0omWNHJK8h0kwfKuqvjM0nzk3XRiWZ4f2\nBWDL1OY3AKfWplxJ62U531YE+AZwvKq+OvWjA8DuYX038ORU+6eGby1uBd44N/2QtHGk6t1H9Ek+\nAvwb8CLwztD8RSbnHR4Hfh94Fbi7ql4fwuRvgDuAXwKfrqp3Pa/gtEJaF4erasdyOy8ZDuvBcJDW\nxUWFg1dISmoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJa\nhoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZ\nDpJahoOkluEgqWU4SGotGQ5JtiT5fpLjSY4l+ezQ/kCSnyV5YXjtnNrmC0lOJHk5ycfH/AdIGsel\ny+jzFvD5qno+yZXA4SRPDT/7WlX99XTnJDcD9wAfAn4P+NckH6yqt9eycEnjWnLkUFWnq+r5Yf1N\n4Diw+V022QU8VlW/qqqfAieAW9aiWEnr56LOOSS5Efgw8OzQdH+SI0keTnL10LYZeG1qswXePUwk\nzaFlh0OS9wLfBj5XVb8AHgI+AGwDTgNfOde12bya/e1JcijJoYuuWtLolhUOSd7DJBi+VVXfAaiq\nM1X1dlW9A3yd30wdFoAtU5vfAJw6f59Vta+qdlTVjtX8AySNYznfVgT4BnC8qr461b5pqtsngKPD\n+gHgniSXJ7kJ2Ar8YO1KlrQelvNtxW3AnwEvJnlhaPsi8Mkk25hMGU4CnwGoqmNJHgdeYvJNx31+\nUyFtPKm64HTA+heR/Cfw38DPZ13LMlzLxqgTrHUMG6VOuLDWP6iq9y1347kIB4AkhzbC+YeNUidY\n6xg2Sp2w+lq9fFpSy3CQ1JqncNg36wKWaaPUCdY6ho1SJ6yy1rk55yBpvszTyEHSHJl5OCS5Y7i1\n+0SSvbOu53xJTiZ5cbgt/dDQdk2Sp5K8MiyvXmo/I9X2cJKzSY5OtbW1ZeLB4TgfSbJ9xnXO3S3/\n7/J4gnk8puM/SqGqZvYCLgF+DLwfuAz4IXDzLGtqajwJXHte218Be4f1vcBfzqi2jwLbgaNL1Qbs\nBP6Jyb0vtwLPzrjOB4A/b/rePPweXA7cNPx+XLJOdW4Ctg/rVwI/GuqZx2O6WK1rdlxnPXK4BThR\nVT+pql8DjzG55Xve7QL2D+v7gbtmUURVPQ28fl7zYrXtAh6piWeAq867BH6961zMzG75r8UfTzCP\nx3T0RynMOhw2wu3dBXwvyeEke4a266vqNEz+IwHXzay6Cy1W2zwe67m95f+8xxPM9TEd61EKsw6H\nZd3ePWO3VdV24E7gviQfnXVBKzRvx3pVt/yPqXk8waJdm7ZZ17pmx3XW4bCs27tnqapODcuzwBNM\nhmJnzg0fh+XZ2VV4gcVqm6tjXau85X8s3eMJmNNjOsajFKbNOhyeA7YmuSnJZUyePXlgxjX9nyRX\nDM/NJMkVwMeY3Jp+ANg9dNsNPDmbCluL1XYA+NRwhv1W4I1zQ+VZmMdb/hd7PAFzeEwXq3VNj+t6\nnV19l7OuO5mcaf0x8KVZ13Nebe9ncob3h8Cxc/UBvwscBF4ZltfMqL5HmQwd/4fJ/xnuXaw2JsPK\nvx2O84vAjhnX+fdDHUeGX9xNU/2/NNT5MnDnOtb5ESZD7SPAC8Nr55we08VqXbPj6hWSklqznlZI\nmlOGg6SW4SCpZThIahkOklqGg6SW4SCpZThIav0vRQ1kUxpMD/YAAAAASUVORK5CYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQcAAAD8CAYAAAB6iWHJAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAADHlJREFUeJzt3UGMnPV5x/HvrxA4ECSgBOQat5DI\nlUoujmVRJKKIHpqALyYHKnJorAjJOYCUSOnBSQ7h2FZNIqG2SI6CYqoUipQgfEjbUCsSvUCwETE2\nLsFJKGxs2Y2oCGqkpMDTw7xupvaz3vXuvjuz6fcjrWb273dmHw/Wl/edmXc2VYUkneu3Zj2ApPlk\nHCS1jIOklnGQ1DIOklrGQVJrtDgkuSPJy0lOJNk71s+RNI6M8T6HJJcAPwT+GFgAngM+UVUvrfkP\nkzSKsfYcbgFOVNWPq+pXwGPArpF+lqQRXDrS/W4GXp/6fgH4w8U2TuLbNKXx/ayq3rfcjceKQ5q1\n/xOAJHuAPSP9fEnn+/eL2XisOCwAW6a+vwE4Ob1BVe0D9oF7DtI8Gus5h+eArUluSnIZcA9wYKSf\nJWkEo+w5VNXbSe4H/hm4BHi4qo6N8bMkjWOUlzIveggPK6T1cLiqdix3Y98hKallHCS1jIOklnGQ\n1DIOklrGQVLLOEhqGQdJLeMgqWUcJLWMg6SWcZDUMg6SWsZBUss4SGoZB0kt4yCpZRwktYyDpJZx\nkNQyDpJaxkFSyzhIahkHSS3jIKllHCS1jIOklnGQ1DIOklrGQVLLOEhqGQdJLeMgqWUcJLUuXc2N\nk7wKvAW8A7xdVTuSXAP8A3Aj8CrwJ1X1n6sbU9J6W4s9hz+qqm1VtWP4fi9wsKq2AgeH7yVtMGMc\nVuwC9g/X9wN3jfAzJI1stXEo4LtJDifZM6xdX1WnAIbL67obJtmT5FCSQ6ucQdIIVvWcA3BbVZ1M\nch3wVJJ/W+4Nq2ofsA8gSa1yDklrbFV7DlV1crg8AzwB3AKcTrIJYLg8s9ohJa2/FcchyRVJrjx7\nHfgocBQ4AOweNtsNPLnaISWtv9UcVlwPPJHk7P38fVX9U5LngMeT3Au8Bty9+jElrbdUzf5w3+cc\npHVxeOotB0vyHZKSWsZBUss4SGoZB0kt4yCpZRwktYyDpJZxkNQyDpJaxkFSyzhIahkHSS3jIKll\nHCS1jIOklnGQ1DIOklrGQVLLOEhqGQdJLeMgqWUcJLWMg6SWcZDUWu0v0pX+31npL4IafjvchuGe\ng6SWcZDUMg6SWsZBUss4SGoZB0kt4yCpZRwktZaMQ5KHk5xJcnRq7ZokTyV5Zbi8elhPkgeTnEhy\nJMn2MYeXNJ7l7Dl8A7jjnLW9wMGq2gocHL4HuBPYOnztAR5amzElrbcl41BVTwNvnLO8C9g/XN8P\n3DW1/khNPANclWTTWg0raf2s9DmH66vqFMBwed2wvhl4fWq7hWFN0gaz1idedWeWtGepJNnD5NBD\n0hxaaRxOJ9lUVaeGw4Yzw/oCsGVquxuAk90dVNU+YB9AkpWd5ibNwEY7u3KlVnpYcQDYPVzfDTw5\ntf7J4VWLW4E3zx5+SNpYltxzSPIocDtwbZIF4EvAnwOPJ7kXeA24e9j8O8BO4ATwC+BTI8wsaR1k\npR9csaZDeFghrYfDVbVjuRv7DklJLeMgqWUcJLWMg6SWcZDUMg6SWsZBUss4SGoZB0kt4yCpZRwk\ntYyDpJZxkNQyDpJaxkFSyzhIahkHSS3jIKllHCS11vr3Vki/2Vbzaacb7BPt3XOQ1DIOklrGQVLL\nOEhqGQdJLeMgqWUcJLWMg6SWcZDUMg6SWsZBUss4SGoZB0kt4yCptWQckjyc5EySo1NrDyT5aZIX\nhq+dU3/2+SQnkryc5GNjDS7NRFbxtcEsZ8/hG8AdzfpXq2rb8PUdgCQ3A/cAHxxu87dJLlmrYSWt\nnyXjUFVPA28s8/52AY9V1S+r6ifACeCWVcwnaUZW85zD/UmODIcdVw9rm4HXp7ZZGNYkbTArjcND\nwAeAbcAp4MvDendk1X6wVpI9SQ4lObTCGSSNaEVxqKrTVfVOVb0LfI1fHzosAFumNr0BOLnIfeyr\nqh1VtWMlM0ga14rikGTT1LcfB86+knEAuCfJ5UluArYC31/diJJmYclPn07yKHA7cG2SBeBLwO1J\ntjE5ZHgV+DRAVR1L8jjwEvA2cF9VvTPO6JLGlKrVfNb2Gg2RzH4I6Tff4Ys5jPcdkpJaxkFSyzhI\nahkHSS3jIKllHCS1jIOklnGQ1DIOklrGQVLLOEhqGQdJLeMgqWUcJLWMg6SWcZDUMg6SWsZBUss4\nSGoZB0kt4yCpZRwktYyDpJZxkNQyDpJaxkFSyzhIahkHSS3jIKllHCS1jIOklnGQ1DIOklrGQVJr\nyTgk2ZLke0mOJzmW5DPD+jVJnkryynB59bCeJA8mOZHkSJLtY/8lJK295ew5vA18rqr+ALgVuC/J\nzcBe4GBVbQUODt8D3AlsHb72AA+t+dSSRrdkHKrqVFU9P1x/CzgObAZ2AfuHzfYDdw3XdwGP1MQz\nwFVJNq355JJGdVHPOSS5EfgQ8CxwfVWdgklAgOuGzTYDr0/dbGFYO/e+9iQ5lOTQxY8taWyXLnfD\nJO8FvgV8tqp+nmTRTZu1Om+hah+wb7jv8/5c0mwta88hyXuYhOGbVfXtYfn02cOF4fLMsL4AbJm6\n+Q3AybUZV9J6Wc6rFQG+Dhyvqq9M/dEBYPdwfTfw5NT6J4dXLW4F3jx7+CFp40jVhffok3wY+Ffg\nReDdYfkLTJ53eBz4XeA14O6qemOIyV8DdwC/AD5VVRd8XsHDCmldHK6qHcvdeMk4rAfjIK2Li4qD\n75CU1DIOklrGQVLLOEhqGQdJLeMgqWUcJLWMg6SWcZDUMg6SWsZBUss4SGoZB0kt4yCpZRwktYyD\npJZxkNQyDpJaxkFSyzhIahkHSS3jIKllHCS1jIOklnGQ1DIOklrGQVLLOEhqGQdJLeMgqWUcJLWM\ng6SWcZDUWjIOSbYk+V6S40mOJfnMsP5Akp8meWH42jl1m88nOZHk5SQfG/MvIGkcly5jm7eBz1XV\n80muBA4neWr4s69W1V9Nb5zkZuAe4IPA7wD/kuT3q+qdtRxc0riW3HOoqlNV9fxw/S3gOLD5AjfZ\nBTxWVb+sqp8AJ4Bb1mJYSevnop5zSHIj8CHg2WHp/iRHkjyc5OphbTPw+tTNFrhwTCTNoWXHIcl7\ngW8Bn62qnwMPAR8AtgGngC+f3bS5eTX3tyfJoSSHLnpqSaNbVhySvIdJGL5ZVd8GqKrTVfVOVb0L\nfI1fHzosAFumbn4DcPLc+6yqfVW1o6p2rOYvIGkcy3m1IsDXgeNV9ZWp9U1Tm30cODpcPwDck+Ty\nJDcBW4Hvr93IktbDcl6tuA34U+DFJC8Ma18APpFkG5NDhleBTwNU1bEkjwMvMXml4z5fqZA2nlSd\n93TA+g+R/AfwX8DPZj3LMlzLxpgTnHUMG2VOOH/W36uq9y33xnMRB4AkhzbC8w8bZU5w1jFslDlh\n9bP69mlJLeMgqTVPcdg36wGWaaPMCc46ho0yJ6xy1rl5zkHSfJmnPQdJc2TmcUhyx3Bq94kke2c9\nz7mSvJrkxeG09EPD2jVJnkryynB59VL3M9JsDyc5k+To1Fo7WyYeHB7nI0m2z3jOuTvl/wIfTzCP\nj+n4H6VQVTP7Ai4BfgS8H7gM+AFw8yxnamZ8Fbj2nLW/BPYO1/cCfzGj2T4CbAeOLjUbsBP4Rybn\nvtwKPDvjOR8A/qzZ9ubh38HlwE3Dv49L1mnOTcD24fqVwA+HeebxMV1s1jV7XGe953ALcKKqflxV\nvwIeY3LK97zbBewfru8H7prFEFX1NPDGOcuLzbYLeKQmngGuOuct8Os952Jmdsp/Lf7xBPP4mI7+\nUQqzjsNGOL27gO8mOZxkz7B2fVWdgsl/JOC6mU13vsVmm8fHem5P+T/n4wnm+jEd66MUZh2HZZ3e\nPWO3VdV24E7gviQfmfVAKzRvj/WqTvkfU/PxBItu2qzNetY1e1xnHYdlnd49S1V1crg8AzzBZFfs\n9Nndx+HyzOwmPM9is83VY12rPOV/LN3HEzCnj+kYH6UwbdZxeA7YmuSmJJcx+ezJAzOe6X8luWL4\n3EySXAF8lMmp6QeA3cNmu4EnZzNha7HZDgCfHJ5hvxV48+yu8izM4yn/i308AXP4mC4265o+ruv1\n7OoFnnXdyeSZ1h8BX5z1POfM9n4mz/D+ADh2dj7gt4GDwCvD5TUzmu9RJruO/83k/wz3LjYbk93K\nvxke5xeBHTOe8++GOY4M/3A3TW3/xWHOl4E713HODzPZ1T4CvDB87ZzTx3SxWdfscfUdkpJasz6s\nkDSnjIOklnGQ1DIOklrGQVLLOEhqGQdJLeMgqfU/k5Rjfb+ASnoAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x2a2ec916be0>"
+       "<matplotlib.figure.Figure at 0x2a2ecad0cf8>"
       ]
      },
      "metadata": {},
@@ -646,7 +646,79 @@
     }
    ],
    "source": [
-    "plt.imshow(lt_50m_broad_starboard_images[201].reshape(255, 255, 3))\n",
+    "plt.imshow(lt_50m_broad_starboard_images[459].reshape(255, 255, 3))\n",
+    "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def broad_less_than_50_meters_port():\n",
+    "    \"\"\"\n",
+    "    Return a numpy array of randomly generated images of a \n",
+    "    power driven vessel that has one masthead light and one running light\n",
+    "    visible.\n",
+    "    \"\"\"\n",
+    "    white = (255, 255, 255)\n",
+    "    black = (0, 0, 0)\n",
+    "    red = (255, 0, 0)\n",
+    "    total_gens = np.random.randint(500, 701)\n",
+    "    all_broad_images = np.empty([total_gens, 195075], dtype=np.uint8)\n",
+    "    for i in range(total_gens):\n",
+    "        new_array = np.zeros((255, 255, 3))\n",
+    "        taller_masthead_light = np.random.randint(50, 201)\n",
+    "        distance_bw_left_endpoint = np.random.randint(20, 211)\n",
+    "        running_light_diff = np.random.randint(10, 31)\n",
+    "        light_width = np.random.randint(10, 21)\n",
+    "        tall_masthead_height = taller_masthead_light + light_width\n",
+    "        tall_masthead_width = distance_bw_left_endpoint + light_width\n",
+    "        running_light_start = tall_masthead_height + running_light_diff\n",
+    "        running_light_width = running_light_start + light_width\n",
+    "        if distance_bw_left_endpoint < 2 * light_width:\n",
+    "            running_light_loc = np.random.randint(distance_bw_left_endpoint - 20, distance_bw_left_endpoint + 21)\n",
+    "        else:\n",
+    "            running_light_loc = np.random.randint(25, distance_bw_left_endpoint + 20)\n",
+    "        running_light_area = running_light_loc + light_width\n",
+    "        new_array[taller_masthead_light:tall_masthead_height, distance_bw_left_endpoint:tall_masthead_width] = white\n",
+    "        new_array[running_light_start:running_light_width, running_light_loc: running_light_area] = red\n",
+    "        new_array = new_array.flatten()\n",
+    "        all_broad_images[i] = new_array\n",
+    "\n",
+    "    return all_broad_images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "port_lt_50m_images = broad_less_than_50_meters_port()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQcAAAD8CAYAAAB6iWHJAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAADHZJREFUeJzt3UGMXeV5xvH/UwgsCBJQAnKNW0jk\nSiUbx7IoElFEF03AG5MFFVk0VoTkLEBKpHThJIuwbKsmkVBbJEdBMVUKRUoQVpW2oVYkuoFgI2Js\nXIKTuDCxhRtREdRISSFvF/e4vbXf8Yxn5sy9U/4/6eqc+813zn19GD1859xzvklVIUnn+o1ZFyBp\nPhkOklqGg6SW4SCpZThIahkOklqjhUOSO5K8nOREkr1jfY6kcWSM+xySXAL8EPhDYAF4DvhEVb20\n5h8maRRjjRxuAU5U1Y+r6lfAY8CukT5L0gguHWm/m4HXpt4vAL+/WOck3qYpje9nVfW+5XYeKxzS\ntP2fAEiyB9gz0udLOt+/XUznscJhAdgy9f4G4NR0h6raB+wDRw7SPBrrmsNzwNYkNyW5DLgHODDS\nZ0kawSgjh6p6O8n9wD8BlwAPV9WxMT5L0jhG+SrzoovwtEJaD4erasdyO3uHpKSW4SCpZThIahkO\nklqGg6SW4SCpZThIahkOklqGg6SW4SCpZThIahkOklqGg6SW4SCpZThIahkOklqGg6SW4SCpZThI\nahkOklqGg6SW4SCpZThIahkOklqGg6SW4SCpZThIahkOklqGg6SW4SCpZThIahkOklqGg6SW4SCp\ndelqNk5yEngLeAd4u6p2JLkG+DvgRuAk8EdV9R+rK1PSeluLkcMfVNW2qtoxvN8LHKyqrcDB4b2k\nDWaM04pdwP5hfT9w1wifIWlkqw2HAr6b5HCSPUPb9VV1GmBYXtdtmGRPkkNJDq2yBkkjWNU1B+C2\nqjqV5DrgqST/utwNq2ofsA8gSa2yDklrbFUjh6o6NSzPAE8AtwCvJ9kEMCzPrLZISetvxeGQ5Iok\nV55dBz4KHAUOALuHbruBJ1dbpKT1t5rTiuuBJ5Kc3c/fVtU/JnkOeDzJvcCrwN2rL1PSekvV7E/3\nveYgrYvDU7ccLMk7JCW1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQy\nHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstw\nkNRazV/Z1rvYWvwB5uEvtGtOOXKQ1DIcJLUMB0ktw0FSa8lwSPJwkjNJjk61XZPkqSSvDMurh/Yk\neTDJiSRHkmwfs3hJ41nOyOEbwB3ntO0FDlbVVuDg8B7gTmDr8NoDPLQ2ZUpab0uGQ1U9DbxxTvMu\nYP+wvh+4a6r9kZp4Brgqyaa1KlbS+lnpNYfrq+o0wLC8bmjfDLw21W9haJO0waz1TVDdXS3t3TJJ\n9jA59ZA0h1Y6cnj97OnCsDwztC8AW6b63QCc6nZQVfuqakdV7VhhDZJGtNJwOADsHtZ3A09OtX9y\n+NbiVuDNs6cfkjaWJU8rkjwK3A5cm2QB+BLwp8DjSe4FXgXuHrp/B9gJnAB+AXxqhJolrYOsxQM0\nqy4imX0Ruig+eLUhHb6Y03jvkJTUMhwktQwHSS0ne9GKeL3g/z9HDpJahoOkluEgqWU4SGoZDpJa\nhoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkluEgqWU4SGoZDpJahoOkltPEvQusxbz/\nTgr37uPIQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktZYMhyQPJzmT5OhU\n2wNJfprkheG1c+pnn09yIsnLST42VuGSxrWckcM3gDua9q9W1bbh9R2AJDcD9wAfHLb56ySXrFWx\nktbPkuFQVU8Dbyxzf7uAx6rql1X1E+AEcMsq6pM0I6u55nB/kiPDacfVQ9tm4LWpPgtDm6QNZqXh\n8BDwAWAbcBr48tDePfbfTieQZE+SQ0kOrbAGSSNa0WQvVfX62fUkXwP+fni7AGyZ6noDcGqRfewD\n9g37WIv5SLQIJ2rRSqxo5JBk09TbjwNnv8k4ANyT5PIkNwFbge+vrkRJs7DkyCHJo8DtwLVJFoAv\nAbcn2cbklOEk8GmAqjqW5HHgJeBt4L6qemec0iWNKVWzH9F7WiGti8NVtWO5nb1DUlLLcJDUMhwk\ntQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDU\nMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLL\ncJDUWjIckmxJ8r0kx5McS/KZof2aJE8leWVYXj20J8mDSU4kOZJk+9j/CElrbzkjh7eBz1XV7wG3\nAvcluRnYCxysqq3AweE9wJ3A1uG1B3hozauWNLolw6GqTlfV88P6W8BxYDOwC9g/dNsP3DWs7wIe\nqYlngKuSbFrzyiWN6qKuOSS5EfgQ8CxwfVWdhkmAANcN3TYDr01ttjC0nbuvPUkOJTl08WVLGtul\ny+2Y5L3At4DPVtXPkyzatWmr8xqq9gH7hn2f93NJs7WskUOS9zAJhm9W1beH5tfPni4MyzND+wKw\nZWrzG4BTa1OupPWynG8rAnwdOF5VX5n60QFg97C+G3hyqv2Tw7cWtwJvnj39kLRxpOrCI/okHwb+\nBXgR+PXQ/AUm1x0eB34beBW4u6reGMLkL4E7gF8An6qqC15X8LRCWheHq2rHcjsvGQ7rwXCQ1sVF\nhYN3SEpqGQ6SWoaDpJbhIKllOEhqGQ6SWoaDpJbhIKllOEhqGQ6SWoaDpJbhIKllOEhqGQ6SWoaD\npJbhIKllOEhqGQ6SWoaDpJbhIKllOEhqGQ6SWoaDpJbhIKllOEhqGQ6SWoaDpJbhIKllOEhqGQ6S\nWoaDpJbhIKllOEhqLRkOSbYk+V6S40mOJfnM0P5Akp8meWF47Zza5vNJTiR5OcnHxvwHSBrHpcvo\n8zbwuap6PsmVwOEkTw0/+2pV/cV05yQ3A/cAHwR+C/jnJL9bVe+sZeGSxrXkyKGqTlfV88P6W8Bx\nYPMFNtkFPFZVv6yqnwAngFvWolhJ6+eirjkkuRH4EPDs0HR/kiNJHk5y9dC2GXhtarMFLhwmkubQ\nssMhyXuBbwGfraqfAw8BHwC2AaeBL5/t2mxezf72JDmU5NBFVy1pdMsKhyTvYRIM36yqbwNU1etV\n9U5V/Rr4Gv976rAAbJna/Abg1Ln7rKp9VbWjqnas5h8gaRzL+bYiwNeB41X1lan2TVPdPg4cHdYP\nAPckuTzJTcBW4PtrV7Kk9bCcbytuA/4YeDHJC0PbF4BPJNnG5JThJPBpgKo6luRx4CUm33Tc5zcV\n0saTqvMuB6x/Ecm/A/8J/GzWtSzDtWyMOsFax7BR6oTza/2dqnrfcjeei3AASHJoI1x/2Ch1grWO\nYaPUCauv1dunJbUMB0mteQqHfbMuYJk2Sp1grWPYKHXCKmudm2sOkubLPI0cJM2RmYdDkjuGR7tP\nJNk763rOleRkkheHx9IPDW3XJHkqySvD8uql9jNSbQ8nOZPk6FRbW1smHhyO85Ek22dc59w98n+B\n6Qnm8ZiOP5VCVc3sBVwC/Ah4P3AZ8APg5lnW1NR4Erj2nLY/B/YO63uBP5tRbR8BtgNHl6oN2An8\nA5NnX24Fnp1xnQ8Af9L0vXn4PbgcuGn4/bhknercBGwf1q8EfjjUM4/HdLFa1+y4znrkcAtwoqp+\nXFW/Ah5j8sj3vNsF7B/W9wN3zaKIqnoaeOOc5sVq2wU8UhPPAFedcwv8ete5mJk98l+LT08wj8d0\n9KkUZh0OG+Hx7gK+m+Rwkj1D2/VVdRom/5GA62ZW3fkWq20ej/XcPvJ/zvQEc31Mx5pKYdbhsKzH\nu2fstqraDtwJ3JfkI7MuaIXm7Viv6pH/MTXTEyzatWmbda1rdlxnHQ7Lerx7lqrq1LA8AzzBZCj2\n+tnh47A8M7sKz7NYbXN1rGuVj/yPpZuegDk9pmNMpTBt1uHwHLA1yU1JLmMy9+SBGdf0P5JcMcyb\nSZIrgI8yeTT9ALB76LYbeHI2FbYWq+0A8MnhCvutwJtnh8qzMI+P/C82PQFzeEwXq3VNj+t6XV29\nwFXXnUyutP4I+OKs6zmntvczucL7A+DY2fqA3wQOAq8My2tmVN+jTIaO/8Xk/wz3LlYbk2HlXw3H\n+UVgx4zr/JuhjiPDL+6mqf5fHOp8GbhzHev8MJOh9hHgheG1c06P6WK1rtlx9Q5JSa1Zn1ZImlOG\ng6SW4SCpZThIahkOklqGg6SW4SCpZThIav0331NbGavL1moAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2a2ec8d97b8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.imshow(port_lt_50m_images[60].reshape(255, 255, 3))\n",
     "plt.show();"
    ]
   },
